syntax = "proto3";

package edge;

option java_multiple_files = true;
option java_package = "com.grpc.edge";
option java_generic_services = true;

service EdgeService {
  // 查詢 edge_id 是否存在
  rpc CheckEdgeIdExists (CheckEdgeIdExistsRequest) returns (CheckEdgeIdExistsResponse);
  // 更新 edge_name
  rpc UpdataEdgeName (UpdataEdgeNameRequest) returns (UpdataEdgeNameResponse);
}

message CheckEdgeIdExistsRequest {
  string edge_id = 1;
}

message CheckEdgeIdExistsResponse {
  bool exists = 1;
}

message UpdataEdgeNameRequest {
  string edge_id = 1;
  string edge_name = 2;
}

message UpdataEdgeNameResponse {
  string error_code = 1;
}